Fix Maven build warnings and refactor deprecated Integer usage