@@ -64,7 +64,7 @@ public class KeyMatchTests extends CrudTestBase {
         requestBody.put(KEY_PROPERTY, keyProp);
         requestBody.put(KEY_PROPERTY, keyProp);
         requestBody.put("query", "query" + id);
-        requestBody.put("max_size", new Integer(id).toString());
+        requestBody.put("max_size", Integer.valueOf(id).toString());
         requestBody.put("boost", 100);
         return requestBody;
     }
